# mpisort

./: CMakeLists.txt  MPI_MergeSort.c  MPI_MergeSort.h  MPI_MergeSort_recursive_test.c  MPI_MergeSort_tp_test.c  README.md  mergeSort.c  mergeSort.h  mergeSort_omp_test.c  mergeSort_test.c  utils.c  utils.h
